Added some more fiels
